# MCPForge

./: README.md  pyproject.toml
.github/workflows/: ci.yml
mcpforge/: __init__.py  cli.py  templates.py
tests/: test_cli.py
